cmake_minimum_required(VERSION 3.27)
project(Lab3_DSA_SortedSet)

set(CMAKE_CXX_STANDARD 17)

add_executable(Lab3_DSA_SortedSet
        ShortTest.h
        ExtendedTest.cpp
        ExtendedTest.h
        SortedSet.h
        SortedSet.cpp
        SortedSetIterator.cpp
        SortedSetIterator.h
        ShortTest.cpp
        App.cpp
)
