cmake_minimum_required(VERSION 3.27)
project(Lab2_DSA_Bag)

set(CMAKE_CXX_STANDARD 17)

add_executable(Lab2_DSA_Bag
        ExtendedTest.h
        ExtendedTest.cpp
        ShortTest.h
        ShortTest.cpp
        Bag.h
        BagIterator.cpp
        BagIterator.h
        App.cpp
        Bag.cpp
        Bag.cpp)
